--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -18,14 +19,23 @@
     "@react-pdf/renderer": "^3.1.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dompurify": "^3.0.6",
+    "draft-convert": "^2.1.13",
+    "draft-js": "^0.11.7",
+    "html-react-parser": "^5.0.6",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "0.9.0",
     "jspdf": "^2.5.1",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "next": "13.5.6",
     "react": "^18",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.47.0",
+    "react-html-parser": "^2.0.2",
+    "react-to-print": "^2.14.15",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
