--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dompurify": "^3.0.6",
     "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
+    "framer-motion": "^10.16.16",
     "html-react-parser": "^5.0.6",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "0.9.0",
