:bug: Fix text editor
git push

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.47.0",
     "react-html-parser": "^2.0.2",
+    "react-quill": "^2.0.0",
     "react-to-print": "^2.14.15",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
